--- a/qemmuWeb/src/component/navigation/Navigaiton.module.css
+++ b/qemmuWeb/src/component/navigation/Navigaiton.module.css
@@ -1,13 +1,12 @@
 .links {
-    flex: 1;
+	flex: 1;
 }
 
 .linksInner {
-    padding-top: var(--mantine-spacing-sm);
-    padding-bottom: var(--mantine-spacing-xl);
+	padding-top: var(--mantine-spacing-xl);
+	padding-bottom: var(--mantine-spacing-xl);
 }
 
 .footer {
-    padding-top: var(--mantine-spacing-md);
-    border-top: rem(1px) solid light-dark(var(--mantine-color-gray-3), var(--mantine-color-dark-4));
+	border-top: rem(1px) solid light-dark(var(--mantine-color-gray-3), var(--mantine-color-dark-4));
 }
