--- a/qemmuWeb/src/component/navigation/Navigaiton.module.css
+++ b/qemmuWeb/src/component/navigation/Navigaiton.module.css
@@ -13,6 +13,12 @@
 	padding-bottom: var(--mantine-spacing-xl);
 }
 
+.linksInner :global(.active) {
+    background-color: light-dark(var(--mantine-color-blue-1), var(--mantine-color-blue-4));
+    color: var(--mantine-color-blue-6);
+    font-weight: 600;
+}
+
 .footer {
 	border-top: rem(1px) solid light-dark(var(--mantine-color-gray-3), var(--mantine-color-dark-4));
 	padding: var(--mantine-spacing-md);
@@ -22,7 +28,7 @@
 .linksInner :global(.mantine-NavLink-root) {
 	border-radius: var(--mantine-radius-sm);
 	margin-bottom: var(--mantine-spacing-xs);
-	transition: background-color 200ms ease;
+	transition: background-color 200ms ease, color 200ms ease;
 }
 
 .linksInner :global(.mantine-NavLink-root:hover) {
